--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "Solves Poeltl game optimally",
     "version": "0.1",
     "manifest_version": 3,
-    "permissions": ["storage", "tabs"],
+    "permissions": ["storage", "tabs", "contextMenus"],
     "host permissions": ["https://poeltl.dunk.town/"],
     "background": {
         "service_worker": "background.js"
