--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "permissions": ["storage", "tabs", "contextMenus"],
     "host_permissions": ["https://poeltl.dunk.town/"],
     "background": {
-        "service_worker": ["background.js", "contentScript.js"]
+        "service_worker": "background.js"
     },
     "content_scripts": [
         {
