--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
     },
     "web_accessible_resources": [
       {
-        "resources": ["webscraping/data.txt", "webscraping/prevTeams.txt"],
+        "resources": ["webscraping/data.txt"],
         "matches": ["https://poeltl.dunk.town/*"],
         "use_dynamic_url": true
       }
